--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "4.2.*",
-		"way/generators": "2.*"
+		"way/generators": "2.*",
+		"fzaninotto/faker": "1.5.*"
 	},
 	"autoload": {
 		"classmap": [
